--- a/MtTownAll/Views/PrefecturePage.xaml
+++ b/MtTownAll/Views/PrefecturePage.xaml
@@ -19,15 +19,15 @@
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0">
             <CommandBar DefaultLabelPosition="Right">
-                <AppBarButton Icon="OpenFile" Label="Select File"></AppBarButton>
+                <AppBarButton Icon="OpenFile" Label="Select File" IsEnabled="False"></AppBarButton>
 
-                <AppBarButton Icon="SaveLocal" Label="Create SQLite DB"></AppBarButton>
+                <AppBarButton Icon="SaveLocal" Label="Create SQLite DB" Command="{x:Bind ViewModel.InsertAllIntoMtPrefAllTableCommand}"></AppBarButton>
 
                 <AppBarButton Icon="Upload" Label="Load from SQLite DB" Visibility="Collapsed"></AppBarButton>
                 <CommandBar.Content>
                     <StackPanel Orientation="Horizontal" Margin="48,0,0,0">
                         <TextBlock Text="全国 都道府県マスター" Style="{ThemeResource TitleTextBlockStyle}" />
-                        <TextBlock Text="mt_pref_all.csv" Foreground="{ThemeResource AccentFillColorDefaultBrush}" Margin="12,14" FontWeight="SemiBold"/>
+                        <HyperlinkButton NavigateUri="https://www.digital.go.jp/policies/base_registry_address" Margin="12,0,0,0" FontWeight="SemiBold" VerticalAlignment="Bottom">mt_pref_all.csv</HyperlinkButton>
                     </StackPanel>
                 </CommandBar.Content>
             </CommandBar>
@@ -42,13 +42,6 @@
                     <SolidColorBrush x:Key="DataGridCellFocusVisualSecondaryBrush" Color="Transparent"/>
                 </controls:DataGrid.Resources>
                 <controls:DataGrid.Columns>
-                    <controls:DataGridTemplateColumn Header="都道府県コード" Tag="PrefectureCodeID">
-                        <controls:DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate x:DataType="model:Prefecture">
-                                <TextBlock Text="{x:Bind Code}" Margin="12,0,0,0" Padding="5"/>
-                            </DataTemplate>
-                        </controls:DataGridTemplateColumn.CellTemplate>
-                    </controls:DataGridTemplateColumn>
 
                     <controls:DataGridTemplateColumn Header="全国地方公共団体コード">
                         <controls:DataGridTemplateColumn.CellTemplate>
@@ -57,7 +50,7 @@
                             </DataTemplate>
                         </controls:DataGridTemplateColumn.CellTemplate>
                     </controls:DataGridTemplateColumn>
-
+                    
                     <controls:DataGridTemplateColumn Header="都道府県名" Tag="PrefectureName">
                         <controls:DataGridTemplateColumn.CellTemplate>
                             <DataTemplate x:DataType="model:Prefecture">
@@ -65,7 +58,6 @@
                             </DataTemplate>
                         </controls:DataGridTemplateColumn.CellTemplate>
                     </controls:DataGridTemplateColumn>
-
 
                     <controls:DataGridTemplateColumn Header="都道府県名_カナ">
                         <controls:DataGridTemplateColumn.CellTemplate>
@@ -78,11 +70,19 @@
                     <controls:DataGridTemplateColumn Header="都道府県名_英字">
                         <controls:DataGridTemplateColumn.CellTemplate>
                             <DataTemplate x:DataType="model:Prefecture">
-                                <TextBlock Text="{x:Bind PrefectureNameEnglish}" Margin="12,0,0,0" Padding="5" />
+                                <TextBlock Text="{x:Bind PrefectureNameRoma}" Margin="12,0,0,0" Padding="5" />
                             </DataTemplate>
                         </controls:DataGridTemplateColumn.CellTemplate>
                     </controls:DataGridTemplateColumn>
 
+                    <controls:DataGridTemplateColumn Header="都道府県コード" Tag="PrefectureCodeID">
+                        <controls:DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate x:DataType="model:Prefecture">
+                                <TextBlock Text="{x:Bind Code}" Margin="12,0,0,0" Padding="5"/>
+                            </DataTemplate>
+                        </controls:DataGridTemplateColumn.CellTemplate>
+                    </controls:DataGridTemplateColumn>
+                    
                 </controls:DataGrid.Columns>
             </controls:DataGrid>
         </Grid>
