--- a/MtTownAll/Views/TownAllPage.xaml
+++ b/MtTownAll/Views/TownAllPage.xaml
@@ -14,8 +14,8 @@
     <Grid Margin="0,48,0,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0">
             <CommandBar DefaultLabelPosition="Right">
@@ -33,7 +33,12 @@
             </CommandBar>
 
         </StackPanel>
-        <Grid Grid.Row="1" Margin="48,12,0,12">
+
+        <Grid Grid.Row="1">
+            <InfoBar Grid.Row="0" Title="{x:Bind ViewModel.InfoBarInfoTitleMtTownAll, Mode=OneWay}" IsOpen="{x:Bind ViewModel.IsShowInfoWindowMtTownAll, Mode=TwoWay}" IsIconVisible="True" IsClosable="True" Severity="Warning" Message="{x:Bind ViewModel.InfoBarInfoMessageMtTownAll, Mode=OneWay}" />
+        </Grid>
+        
+        <Grid Grid.Row="2" Margin="48,12,0,12">
             <controls:DataGrid ItemsSource="{x:Bind ViewModel.TownAllSource, Mode=OneWay}" Grid.Row="1" AutoGenerateColumns="False" GridLinesVisibility="Horizontal">
                 <controls:DataGrid.Resources>
                     <SolidColorBrush x:Key="DataGridColumnHeaderBackgroundColor" Color="Transparent" />
